chore: Update meta description in index.html and add .vercel to gitignore.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="themesflat.com">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description"
-        content="Purvansh - Personal Portfolio is a sleek and modern HTML template designed for developers, designers, freelancers, and professionals who want to showcase their work online. Fully responsive, SEO-friendly, and easy to customize, it helps you create a strong personal brand and impress potential clients or employers.">
+        content="Purvansh Sahu- Personal Portfolio is a sleek and modern HTML template designed for developers, designers, freelancers, and professionals who want to showcase their work online. Fully responsive, SEO-friendly, and easy to customize, it helps you create a strong personal brand and impress potential clients or employers.">
 
     <!-- font -->
     <link rel="stylesheet" href="assets/fonts/fonts.css">
