feat: Update author meta tag, add external links to project images, and create an empty VS Code settings file.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <title>Purvansh - Personal Portfolio HTML Template</title>
-    <meta name="author" content="themesflat.com">
+    <meta name="author" content="Purvansh Sahu">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description"
         content="Purvansh Sahu- Personal Portfolio is a sleek and modern HTML template designed for developers, designers, freelancers, and professionals who want to showcase their work online. Fully responsive, SEO-friendly, and easy to customize, it helps you create a strong personal brand and impress potential clients or employers.">
@@ -225,35 +225,47 @@
                                 <div class="slick-for">
                                     <!-- Clone 1 -->
                                     <div>
-                                        <div class="image effectFade fadeZoom">
-                                            <img src="assets/images/Projects/image copy.png" alt="Image">
-                                        </div>
+                                        <a href="https://travel-planner-rho-three.vercel.app/" target="_blank" rel="noopener noreferrer">
+                                            <div class="image effectFade fadeZoom">
+                                                <img src="assets/images/Projects/image copy.png" alt="Parallax Project">
+                                            </div>
+                                        </a>
                                     </div>
                                     <div>
-                                        <div class="image">
-                                            <img src="assets/images/Projects/SCR-20251226-tgod.png" alt="Image">
-                                        </div>
+                                        <a href="https://bakery-landing-one.vercel.app/" target="_blank" rel="noopener noreferrer">
+                                            <div class="image">
+                                                <img src="assets/images/Projects/SCR-20251226-tgod.png" alt="Bakery Project">
+                                            </div>
+                                        </a>
                                     </div>
                                     <div>
-                                        <div class="image">
-                                            <img src="assets/images/Projects/SCR-20260103-bhcf.jpeg" alt="Image">
-                                        </div>
+                                        <a href="https://content-creator-sage.vercel.app/" target="_blank" rel="noopener noreferrer">
+                                            <div class="image">
+                                                <img src="assets/images/Projects/SCR-20260103-bhcf.jpeg" alt="Portfolio Project">
+                                            </div>
+                                        </a>
                                     </div>
                                     <!-- Clone 2 -->
                                     <div>
-                                        <div class="image">
-                                            <img src="assets/images/Projects/image copy.png" alt="Image">
-                                        </div>
+                                        <a href="https://travel-planner-rho-three.vercel.app/" target="_blank" rel="noopener noreferrer">
+                                            <div class="image">
+                                                <img src="assets/images/Projects/image copy.png" alt="Parallax Project">
+                                            </div>
+                                        </a>
                                     </div>
                                     <div>
-                                        <div class="image">
-                                            <img src="assets/images/Projects/SCR-20251226-tgod.png" alt="Image">
-                                        </div>
+                                        <a href="https://bakery-landing-one.vercel.app/" target="_blank" rel="noopener noreferrer">
+                                            <div class="image">
+                                                <img src="assets/images/Projects/SCR-20251226-tgod.png" alt="Bakery Project">
+                                            </div>
+                                        </a>
                                     </div>
                                     <div>
-                                        <div class="image">
-                                            <img src="assets/images/Projects/SCR-20260103-bhcf.jpeg" alt="Image">
-                                        </div>
+                                        <a href="https://content-creator-sage.vercel.app/" target="_blank" rel="noopener noreferrer">
+                                            <div class="image">
+                                                <img src="assets/images/Projects/SCR-20260103-bhcf.jpeg" alt="Portfolio Project">
+                                            </div>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
