feat: Add external links to projects and social media, and disable hash-based scroll animation.

--- a/index.html
+++ b/index.html
@@ -225,45 +225,55 @@
                                 <div class="slick-for">
                                     <!-- Clone 1 -->
                                     <div>
-                                        <a href="https://travel-planner-rho-three.vercel.app/" target="_blank" rel="noopener noreferrer">
+                                        <a href="https://travel-planner-rho-three.vercel.app/" target="_blank"
+                                            rel="noopener noreferrer">
                                             <div class="image effectFade fadeZoom">
                                                 <img src="assets/images/Projects/image copy.png" alt="Parallax Project">
                                             </div>
                                         </a>
                                     </div>
                                     <div>
-                                        <a href="https://bakery-landing-one.vercel.app/" target="_blank" rel="noopener noreferrer">
+                                        <a href="https://bakery-landing-one.vercel.app/" target="_blank"
+                                            rel="noopener noreferrer">
                                             <div class="image">
-                                                <img src="assets/images/Projects/SCR-20251226-tgod.png" alt="Bakery Project">
+                                                <img src="assets/images/Projects/SCR-20251226-tgod.png"
+                                                    alt="Bakery Project">
                                             </div>
                                         </a>
                                     </div>
                                     <div>
-                                        <a href="https://content-creator-sage.vercel.app/" target="_blank" rel="noopener noreferrer">
+                                        <a href="https://content-creator-sage.vercel.app/" target="_blank"
+                                            rel="noopener noreferrer">
                                             <div class="image">
-                                                <img src="assets/images/Projects/SCR-20260103-bhcf.jpeg" alt="Portfolio Project">
+                                                <img src="assets/images/Projects/SCR-20260103-bhcf.jpeg"
+                                                    alt="Portfolio Project">
                                             </div>
                                         </a>
                                     </div>
                                     <!-- Clone 2 -->
                                     <div>
-                                        <a href="https://travel-planner-rho-three.vercel.app/" target="_blank" rel="noopener noreferrer">
+                                        <a href="https://travel-planner-rho-three.vercel.app/" target="_blank"
+                                            rel="noopener noreferrer">
                                             <div class="image">
                                                 <img src="assets/images/Projects/image copy.png" alt="Parallax Project">
                                             </div>
                                         </a>
                                     </div>
                                     <div>
-                                        <a href="https://bakery-landing-one.vercel.app/" target="_blank" rel="noopener noreferrer">
+                                        <a href="https://bakery-landing-one.vercel.app/" target="_blank"
+                                            rel="noopener noreferrer">
                                             <div class="image">
-                                                <img src="assets/images/Projects/SCR-20251226-tgod.png" alt="Bakery Project">
+                                                <img src="assets/images/Projects/SCR-20251226-tgod.png"
+                                                    alt="Bakery Project">
                                             </div>
                                         </a>
                                     </div>
                                     <div>
-                                        <a href="https://content-creator-sage.vercel.app/" target="_blank" rel="noopener noreferrer">
+                                        <a href="https://content-creator-sage.vercel.app/" target="_blank"
+                                            rel="noopener noreferrer">
                                             <div class="image">
-                                                <img src="assets/images/Projects/SCR-20260103-bhcf.jpeg" alt="Portfolio Project">
+                                                <img src="assets/images/Projects/SCR-20260103-bhcf.jpeg"
+                                                    alt="Portfolio Project">
                                             </div>
                                         </a>
                                     </div>
@@ -637,9 +647,14 @@
                         </div>
                         <div class="col-6 col-sm-4 col-md-3">
                             <ul class="footer-menu-list mb-0">
-                                <li><a href="#" class="link letter-space--2 h5">GitHub</a></li>
-                                <li><a href="#" class="link letter-space--2 h5">LinkedIn</a></li>
-                                <li><a href="#" class="link letter-space--2 h5">Twitter</a></li>
+                                <li><a href="https://github.com/purvanshh" target="_blank"
+                                        class="link letter-space--2 h5">GitHub</a></li>
+                                <li><a href="https://www.linkedin.com/in/purvansh-sahu-25b24228a/" target="_blank"
+                                        class="link letter-space--2 h5">LinkedIn</a></li>
+                                <li><a href="https://purvansh-sahu.vercel.app" target="_blank"
+                                        class="link letter-space--2 h5">Frontend Portfolio</a></li>
+                                <li><a href="https://purvanshsahu.vercel.app" target="_blank"
+                                        class="link letter-space--2 h5">ML Portfolio</a></li>
                             </ul>
                         </div>
                     </div>
@@ -749,17 +764,25 @@
                             </p>
                         </div>
                         <div class="right">
-                            <a href="#" class="tf-link-icon text-caption link">
+                            <a href="https://github.com/purvanshh" target="_blank"
+                                class="tf-link-icon text-caption link">
                                 <i class="icon icon-arrow-top-right"></i>
                                 GITHUB
                             </a>
-                            <a href="#" class="tf-link-icon text-caption link">
+                            <a href="https://www.linkedin.com/in/purvansh-sahu-25b24228a/" target="_blank"
+                                class="tf-link-icon text-caption link">
                                 <i class="icon icon-arrow-top-right"></i>
                                 LINKEDIN
                             </a>
-                            <a href="#" class="tf-link-icon text-caption link">
+                            <a href="https://purvansh-sahu.vercel.app" target="_blank"
+                                class="tf-link-icon text-caption link">
                                 <i class="icon icon-arrow-top-right"></i>
-                                TWITTER
+                                FRONTEND PORTFOLIO
+                            </a>
+                            <a href="https://purvanshsahu.vercel.app" target="_blank"
+                                class="tf-link-icon text-caption link">
+                                <i class="icon icon-arrow-top-right"></i>
+                                ML PORTFOLIO
                             </a>
                         </div>
                     </div>
